<resources>
    <string name="app_name">WorkingApp</string>
    <string name="imagen_de_la_flecha_hacia_atras">Imagen de la flecha hacia atras</string>
    <string name="text_ticket">Ticket</string>
    <string name="optionCloseTicket">Cerrar</string>
    <string name="optionDeleteTicket">Borrar</string>
    <string name="optionEditTicket">Editar</string>
    <string name="descripcion_del_ticket">Descripcion del ticket</string>
    <string name="titulo_ticket">Titulo Ticket</string>
    <string name="calendario">Calendario</string>
    <string name="tickets">Tickets</string>
    <string name="herramientas">Herramientas</string>
    <string name="autor">Autor</string>
    <string name="workingapp">WorkingApp</string>
    <string name="icono_de_calendario">Icono de calendario</string>
    <string name="icono_de_tickets">Icono de tickets</string>
    <string name="icono_de_herramientas">Icono de herramientas</string>
    <string name="eliminar">Eliminar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="ejemplo_date">01/01/2021</string>
    <string name="ejemplo_titulo">TITULO DEL TICKET</string>
    <string name="ejemplo_autor">Nombre del autor</string>
    <string name="ejemplo_descripcion_ticket">Descripción del ticket</string>
    <string name="clima">Clima</string>
    <string name="realizados">Realizados</string>
    <string name="cancelados">Cancelados</string>
    <string name="general">General</string>
    <string name="ciudad">Ciudad</string>
    <string name="act_ciu">actualizado en</string>
    <string name="temperatura">25</string>
    <string name="grados">°C</string>
    <string name="estado">Soleado</string>
    <string name="temp_min">Min</string>
    <string name="temp_max">Max</string>
    <string name="amanecer">Amanecer</string>
    <string name="hora_amanecer">5.30</string>
    <string name="S_Termica">S. termica</string>
    <string name="porc_lluvia">6</string>
    <string name="atardecer">Atardecer</string>
    <string name="hora_atard">6.30</string>
    <string name="humedad">Humedad</string>
    <string name="v_humedad">50</string>
    <string name="presion">Presion</string>
    <string name="v_presion">1</string>
    <string name="vel_viento">Velocidad viento</string>
    <string name="v_viento">18.5km</string>
    <string name="toastInfoVacia"> ¡Complete todos los campos, por favor!</string>
    <string name="optionBackTicket">Atras</string>
    <string name="dia">Dia</string>
    <string name="fecha">12/07/2021</string>
    <string name="pronostico">Pronostico de 5 dias</string>
    <string name="escriba_el_autor">Escriba el Autor</string>
    <string name="escriba_el_titulo">Escriba el Titulo</string>
    <string name="escriba_una_descripcion">Escriba una descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="estado_ticket">Estado:</string>
    <string name="realizado">Realizado</string>
    <string name="en_proceso">En proceso</string>
    <string name="cancelado">Cancelado</string>
    <string name="modo_oscuro_claro">Modo oscuro/Claro</string>
    <string name="nombre_de_la_aplicacion">Working App</string>
    <string name="icono_de_la_aplicacion">icono_app</string>
    <string name="email">Email</string>
    <string name="ingrese_aqui_su_email">Ingrese aqui su email</string>
    <string name="password">Contraseña</string>
    <string name="ingrese_aqui_su_contrasenia">Ingrese aqui su contraseña</string>
    <string name="si_no_tenes_cuenta">Si no tenes cuenta</string>
    <string name="registrate">Registrate</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombreDeUsuario">Nombre</string>
    <string name="ingrese_aqui_su_nombre">Ingrese aqui su nombre</string>
    <string name="supervisor">Supervisor</string>
    <string name="empleado">Empleado</string>
    <string name="user">Usuario</string>
    <string name="userimage">userImage</string>
    <string name="nombreUsuario">nombreUsuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="nombre_de_usuario_no_encontrado">Nombre de usuario no encontrado</string>
</resources>