<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.cardview.widget.CardView
    android:id="@+id/backgroundTextTicket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    android:backgroundTint="@color/background_description_ticket"
    app:cardCornerRadius="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.476"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tbPronostico">

    <TextView
        android:id="@+id/txtDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/dia"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/fecha"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEstadoPronostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="42dp"
        android:text="@string/estado"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgPronostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="42dp"
        android:layout_gravity="bottom|center" />

    <TextView
        android:id="@+id/txtPronosticoViento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="42dp"
        android:layout_gravity="bottom|end"
        android:text="@string/v_viento"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtTempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/temp_max"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtTempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/temp_min"
        android:textSize="18sp" />



</androidx.cardview.widget.CardView>


</FrameLayout>