<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/backgroundTextTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_description_ticket"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTicketView">

        <TextView
            android:id="@+id/textTituloTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulo_ticket"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDescripcionTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="60dp"
            android:text="@string/descripcion_del_ticket"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textNombreAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/autor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textDateTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="8dp"
            android:text="23/05/2021" />

    </androidx.cardview.widget.CardView>

</LinearLayout>