<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbTicketView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2180F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="Ticket"
        app:titleTextColor="@color/white"
        tools:layout_editor_absoluteX="0dp">

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/backgroundTextTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_description_ticket"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTicketView">


        <TextView
            android:id="@+id/textTituloTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulo_ticket"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDescripcionTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="60dp"
            android:text="@string/descripcion_del_ticket"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textNombreAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/autor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textDateTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="8dp"
            android:text="23/05/2021" />


    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/barTicketView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/background_navigation"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:fabSize="normal"
            app:layout_anchor="@id/barTicketView" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>